WeakRef deref can return null instead of undefined https://bugs.webkit.org/show_bug.cgi?id=235880

Reviewed by Sam Weinig and Alexey Shvayka.

JSTests:

* stress/v8-finalizationregistry-and-weakref.js:
(setTimeout):

Source/JavaScriptCore:

WeakRef#deref should return undefined[1] when a wrapped object is collected.

[1]: https://tc39.es/ecma262/#sec-weakrefderef

* runtime/WeakObjectRefPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

LayoutTests:

* js/script-tests/weakref-async-is-collected.js:
(async test):
* js/script-tests/weakref-eventually-collects-values.js:
(let.weakRefs.async test):
* js/script-tests/weakref-finalizationregistry.js:
(async test):
* js/script-tests/weakref-microtasks-dont-collect.js:
(async test):


Canonical link: https://commits.webkit.org/246848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289152 268f45cc-cd09-0410-ab3c-d52691b4dbfc